# Sentiment-MLOps

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  implementation_fact.md  implementation_plan.md  params.yaml  pyproject.toml  task_description.md
.dvc/: config
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  train.yml
app/: __init__.py  config.py  exceptions.py  main.py  model_loader.py  schemas.py
docker/cli/: Dockerfile
docker/fastapi/: Dockerfile
docker/mlflow/: Dockerfile
docker/nginx/: nginx.conf
docker/nginx/ssl/: .gitkeep
docker/test/: Dockerfile
docker/training/: Dockerfile
pipelines/: __init__.py  cli.py  test_model.py  train.py  train_simple.py
pipelines/tasks/: __init__.py  data_tasks.py  mlflow_tasks.py  training_tasks.py
scripts/: prepare_data.py
src/: __init__.py  config.py  data.py  model.py  preprocessing.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_data.py  test_model.py  test_preprocessing.py
